--- a/ch08-taskplanning.tex
+++ b/ch08-taskplanning.tex
@@ -6,4 +6,9 @@
 Uses CMR.
 Runs separate Multi-Set PRMs.
 
+Lots of literature in subgoal planning to connect to here.
+
 Proteus Reasons Over Task Effort Using Sampling.
+
+To be clear, no symbolic planning here --
+complementary!
